--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -44,6 +44,7 @@ a {
 .user-box .layui-nav-img {
   width: 40px;
   height: 40px;
+  display: none;
 }
 
 .user-box .text-avatar {
@@ -57,8 +58,11 @@ a {
   justify-content: center;
   font-size: 16px;
   margin-right: 10px;
+  display: none;
 }
 
 .user-box .text {
   font-size: 12px;
 }
+
+/* 最近天气降的挺快；注意保暖 */
